# paulxstretch

./: CHANGES.md  CMakeLists.txt  LICENSE  README.md  paulstretchplugin.jucer  paulstretchplugin_ios.jucer  readme.txt  setupcmake.sh  setupcmakewin.sh  setupcmakewin32.sh  setupcmakexcode.sh  updateclap.sh
Source/: CrossPlatformUtils.h  CrossPlatformUtilsIOS.mm  CrossPlatformUtilsLinux.cpp  CrossPlatformUtilsMac.mm  CrossPlatformUtilsWindows.cpp  CustomLookAndFeel.cpp  CustomLookAndFeel.h  CustomStandaloneFilterApp.cpp  CustomStandaloneFilterWindow.h  GenericItemChooser.h  OptionsView.cpp  OptionsView.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RenderSettingsComponent.cpp  RenderSettingsComponent.h  SonoChoiceButton.h  SonoTextButton.cpp  envelope_component.cpp  envelope_component.h  jcdp_envelope.h  ps3_BufferingAudioSource.cpp  ps3_BufferingAudioSource.h
Source/PS_Source/: BinauralBeats.cpp  BinauralBeats.h  FreeEdit.cpp  FreeEdit.h  Mutex.h  PaulStretchControl.cpp  PaulStretchControl.h  Player.cpp  Player.h  ProcessedStretch.cpp  ProcessedStretch.h  Stretch.cpp  Stretch.h  StretchSource.cpp  StretchSource.h  globals.cpp  globals.h
Source/PS_Source/Input/: AInputS.h  InputS.h
Source/WDL/: heapbuf.h  resample.cpp  resample.h  wdltypes.h
Source/pffft/: pffft.c
linux/: BUILDING.md  build.sh  deb_get_prereqs.sh  fedora_get_prereqs.sh  install.sh  paulxstretch.desktop  uninstall.sh
mobile/: paulstretchplugin_ios.jucer
release/: buildmac.sh  buildwin.sh  codesign.sh  distmac.sh  distwin.sh  makepkgdmg.sh  notarizedmg.sh  wininstaller.iss
release/PaulXStretchPkgLayout/: Info.plist  Preview2.icns
release/PaulXStretchPkgLayout/Icons/: LayoutItem.6101CCD3-D709-4C64-95FF-0349E9B8C4C4.icns
release/macpkg/: PaulXStretch.pkgproj  intro.txt
